<resources>
    <string name="app_name">Ventea Hub MilkTea</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_contact_no">Contact No.</string>
    <string name="prompt_mobile_mask">09xxxxxxxxx</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_driver_account">Driver Account</string>
    <string name="action_register">Register</string>
    <string name="action_submit">Submit</string>
    <string name="action_update">Update</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main_customer">MainCustomerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <!--  Strings related to menu  -->
    <string name="menu_product">Product List</string>
    <string name="menu_order_history">Orders</string>
    <string name="menu_account">Account</string>
    <string name="menu_history">History</string>
    <string name="menu_order">Orders</string>
    <string name="menu_delivery">Delivery</string>

    <!-- Strings related to product view -->
    <string name="product_instruction">Special Instruction</string>
    <string name="product_instruction_hint">Eg. No onions please</string>

    <!-- String related to cart -->
    <string name="order_summary">Order Summary</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="remove_cart">Remove From Cart</string>
    <string name="cart_empty">Cart Empty</string>

    <!-- String related to driver's order list -->
    <string name="action_view_order">View Order</string>
    <string name="action_accept_order">Accept</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_close">Close</string>
    <string name="prompt_price">Price:</string>
    <string name="prompt_qty">Qty:</string>

    <!-- String related to checkout -->
    <string name="deliver_to">Deliver To</string>
    <string name="place_order">Place Order</string>
    <string name="select_address">Select Address</string>
    <string name="search_address">Search Address...</string>
    <string name="payment_method">Payment Method</string>
    <string name="cod">Cash on Delivery</string>
    <string name="gcash">GCash</string>
    <string name="gcash_prompt">Send payment to this account:</string>
    <string name="label_msg">* Please enter the order number in the MSG field in
        order for us to confirm your payment.</string>
    <string name="order_no_label_placeholder">Order number: </string>
    <string name="order_no_placeholder">1210529081732</string>

    <!-- String related to Maps   -->
    <string name="action_cancel_order">Cancel</string>
    <string name="action_delivered">Delivered</string>
    <string name="text_no_delivery">You have no delivery in progress.</string>
</resources>