<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ui.RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/full_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <EditText
            android:id="@+id/txtEmail"
            style="@style/textbox_style"
            android:layout_width="match_parent"
            android:hint="@string/prompt_email"
            android:inputType="text|textEmailAddress" />

        <EditText
            android:id="@+id/txtUsername"
            style="@style/textbox_style"
            android:layout_width="match_parent"
            android:hint="@string/prompt_username"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtPassword"
            style="@style/textbox_style"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

        <br.com.sapereaude.maskedEditText.MaskedEditText
            android:id="@+id/txtContactNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_mobile_mask"
            android:inputType="phone"
            android:textAlignment="center"
            app:allowed_chars="1234567890"
            app:keep_hint="true"
            app:mask="#### #### ###" />

<!--        <EditText-->
<!--            android:id="@+id/txtContactNo"-->
<!--            style="@style/textbox_style"-->
<!--            android:hint="@string/prompt_contact_no"-->
<!--            android:inputType="textPassword" />-->

        <Switch
            android:id="@+id/swAccsLvl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_driver_account" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="submitOnClick"
            android:text="@string/action_submit" />
    </LinearLayout>

</LinearLayout>