<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.common.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <ImageView
            android:id="@+id/acc_imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/full_logo" />

        <EditText
            android:id="@+id/acc_txtUsername"
            style="@style/textbox_style"
            android:layout_width="match_parent"
            android:hint="@string/prompt_username"
            android:inputType="text"
            android:enabled="false"
            />

        <EditText
            android:id="@+id/acc_txtEmail"
            style="@style/textbox_style"
            android:layout_width="match_parent"
            android:hint="@string/prompt_email"
            android:inputType="text|textEmailAddress" />

        <EditText
            android:id="@+id/acc_txtPassword"
            style="@style/textbox_style"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

        <br.com.sapereaude.maskedEditText.MaskedEditText
            android:id="@+id/acc_txtContactNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_mobile_mask"
            android:inputType="phone"
            android:textAlignment="center"
            app:allowed_chars="1234567890"
            app:keep_hint="true"
            app:mask="#### #### ###" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_update"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>