<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_order">

    <fragment
        android:id="@+id/nav_order"
        android:name="com.dehaja.venteahubmilktea.ui.driver.OrderFragment"
        android:label="@string/menu_order_history"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_delivery"
        android:name="com.dehaja.venteahubmilktea.ui.common.DeliveryMapsFragment"
        android:label="@string/menu_delivery"
        tools:layout="@layout/fragment_for_delivery"
        />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.dehaja.venteahubmilktea.ui.common.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />
</navigation>