<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_product">

    <fragment
        android:id="@+id/nav_product"
        android:name="com.dehaja.venteahubmilktea.ui.product.ProductFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/nav_order_history"
        android:name="com.dehaja.venteahubmilktea.ui.order_history.OrderHistoryFragment"
        android:label="@string/menu_order_history"
        tools:layout="@layout/fragment_order_history" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.dehaja.venteahubmilktea.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />
</navigation>