<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="50dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/full_logo" />

        <EditText
            android:id="@+id/txtUsername"
            style="@style/textbox_style"
            android:layout_width="match_parent"
            android:hint="@string/prompt_username"
            android:inputType="text"
            android:text="" />

        <EditText
            android:id="@+id/txtPassword"
            style="@style/textbox_style"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:text="" />

        <Button
            android:id="@+id/btnSignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="loginOnClick"
            android:text="@string/action_sign_in"
            android:background="@color/light_green" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registerOnClick"
            android:text="@string/action_register"
            android:background="@color/light_yellow"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
</ScrollView>