<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ui.cart.CheckoutActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/productViewClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_margin="10dp"
        android:alpha="0.6"
        android:onClick="closeOnClick"
        android:src="@drawable/ic_close"
        app:backgroundTint="@color/med_gray"
        app:fabCustomSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageProductViewImage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white"
        android:src="@mipmap/banner"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDeliverTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp"
        android:text="@string/deliver_to"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageProductViewImage" />

    <LinearLayout
        android:id="@+id/linearSelectAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/textDeliverTo"
        android:paddingHorizontal="10dp"
        android:paddingVertical="20dp"
        android:onClick="selectAddress"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imageLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_location_on_40" />

        <TextView
            android:id="@+id/txtAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_address"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:maxLines="1"/>

        <ImageView
            android:id="@+id/imageRightArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_40" />

    </LinearLayout>

    <TextView
        android:id="@+id/textPaymentMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp"
        android:text="@string/payment_method"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearSelectAddress" />

    <LinearLayout
        android:id="@+id/linearPaymentMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/textPaymentMethod"
        android:paddingHorizontal="10dp"
        android:paddingVertical="20dp"
        android:onClick="selectAddress"
        android:background="@color/white">


        <RadioGroup
            android:id="@+id/rgPaymentMethod"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/rbCOD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cod"
                android:textSize="18dp"/>

            <RadioButton
                android:id="@+id/rbGCash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gcash"
                android:textSize="18dp"/>
        </RadioGroup>

        <LinearLayout
            android:id="@+id/linearGCashInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:visibility="visible">
            <TextView
                android:id="@+id/textGCashPrompt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="@string/gcash_prompt"/>

            <TextView
                android:id="@+id/textGCashName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:text="@string/prompt_username"/>

            <TextView
                android:id="@+id/textGCashNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:text="@string/prompt_mobile_mask"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/textOrderNumberLabel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:text="@string/order_no_label_placeholder"/>

                <TextView
                    android:id="@+id/textOrderNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/order_no_placeholder"
                    android:textColor="@color/gray"
                    android:textSize="18dp"
                    android:layout_marginLeft="5dp"
                    android:textIsSelectable="true"
                    android:focusable="true"
                    android:longClickable="true"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/light_red"
                android:textSize="16dp"
                android:textStyle="italic"
                android:text="@string/label_msg"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearCheckout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="viewStart"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                android:text="₱ 0.00"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnPlaceOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:text="@string/place_order"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginVertical="10dp"
            android:onClick="closeOnClick"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>