<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ui.cart.CartActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/productViewClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_margin="10dp"
        android:alpha="0.6"
        android:onClick="closeOnClick"
        android:src="@drawable/ic_close"
        app:backgroundTint="@color/med_gray"
        app:fabCustomSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageProductViewImage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white"
        android:src="@mipmap/banner"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textOrderSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp"
        android:text="@string/order_summary"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageProductViewImage" />

    <TextView
        android:id="@+id/textEmptyCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textOrderSummary"
        android:textSize="16sp"
        android:textColor="@color/gray"
        android:text="@string/cart_empty"
        android:padding="10dp"
        android:textAlignment="center"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/listCartItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:contentDescription="test"
        android:paddingBottom="350dp"
        app:layout_constraintBottom_toTopOf="@id/linearCheckout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textOrderSummary"
        app:layout_constraintVertical_bias="0.0"
        />

    <LinearLayout
        android:id="@+id/linearCheckout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="viewStart"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                android:text="P100.00"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonAddToCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:text="@string/checkout"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginVertical="10dp"
            android:onClick="checkoutOnClick"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>