<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:padding="10dp"
    tools:context=".ui.driver.OrderViewActivity">

  <TextView
      android:id="@+id/txtOrderViewUsername"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Username"
      android:textColor="#000000"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recOrderView"
      android:layout_width="0dp"

      android:layout_height="0dp"
      android:layout_marginTop="5dp"
      app:layout_constraintBottom_toTopOf="@+id/txtOrderViewGrandTotal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtOrderViewUsername">

  </androidx.recyclerview.widget.RecyclerView>

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp"
      android:layout_marginBottom="36dp"
      android:text="@string/total"
      android:textColor="#000000"
      android:textSize="18sp"
      app:layout_constraintBottom_toTopOf="@+id/btnOrderViewClose"
      app:layout_constraintStart_toStartOf="@+id/recOrderView" />

  <TextView
      android:id="@+id/txtOrderViewGrandTotal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="P 99999.00"
      android:textAlignment="viewEnd"
      android:textColor="#000000"
      android:textSize="24sp"
      app:layout_constraintBottom_toBottomOf="@+id/textView2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.932"
      app:layout_constraintStart_toEndOf="@+id/textView2"
      app:layout_constraintTop_toTopOf="@+id/textView2"
      app:layout_constraintVertical_bias="0.0" />

  <Button
      android:id="@+id/btnOrderViewClose"
      style="@style/Widget.AppCompat.Button.Colored"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:text="@string/action_close"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/btnOrderViewAccept" />

  <Button
      android:id="@+id/btnOrderViewAccept"
      style="@style/Widget.AppCompat.Button.Colored"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/action_accept_order"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>